docs: the manual install adds the metamodel processor
The README's manual Gradle snippet imported the BOM and added storm-kotlin,
storm-core and the compiler plugin, but not the metamodel processor, so a
reader following it got no User_ or City_ classes and nothing to write a
query against. The module table two sections earlier lists the processor,
and the installation guide includes it in the same snippet, so the README
was the odd one out.

The section covers Maven and manual Gradle but showed the Kotlin path
only. Java gets its own snippet, with the annotation processor and the
preview flags that string templates require, both of which the Gradle
plugin sets on its own.

The versions stay as they are: the release workflow rewrites them from the
tag, and its guards still match after this edit.